updated integrationw with  resolve API V2 version
